# datasets_utils

./: .gitignore  README.md  cp_dir.sh  pixi.toml  pyproject.toml  utils.sh
datalad/: create_annex_cache.sh  datalad.sh  datalad_brf.py  env.sh  install_config  setup_environment.sh  utils.sh
datalad/test/: test_hardlinks.sh
generic/: compress.py  extract.py
globus/: setup.sh  setup_environment.sh  utils.sh
jug/: jug_exec.py  jug_exec.sh  requirements_jug.txt  utils.sh
minio/: BUCKET-policy.json  README.rst  config  utils.sh
rclone/: gdrive_cp_dir.sh  gdrive_mirror_dir_tree.sh  gdrive_trim_file_prefix.sh  utils.sh
